Fix layout bug mobile

--- a/src/components/30-organisms/footer/child.scss
+++ b/src/components/30-organisms/footer/child.scss
@@ -29,7 +29,7 @@ axa-footer {
     display: block;
     text-decoration: none;
 
-    padding: 10px;
+    padding: 20px 30px;
 
     @include breakpoint($mediaquery-sm-up) {
       padding: 0px;
